# stuckliste

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
ci/: Dockerfile  build.sh  docker.sh  lint.sh  preamble.sh  publish.sh  test.sh
cli/: Cargo.toml
cli/tests/: macos.rs
docs/: bom-file-format-reference.md  receipt-file-format-reference.md
src/: block_io.rs  blocks.rs  bom.rs  fat.rs  file_type.rs  io.rs  lib.rs  named_blocks.rs  tree.rs
src/bom/: block_io.rs  blocks.rs  file.rs  io.rs  mod.rs  named_blocks.rs  tree.rs
src/receipt/: bom.rs  bom_info.rs  context.rs  crc.rs  fat.rs  file_sizes.rs  file_type.rs  hard_links.rs  mach.rs  metadata.rs  mod.rs  path_component.rs  ptr.rs  virtual_paths.rs
src/test/: block_io.rs  io.rs  mod.rs
