[package]
name = "stuckliste"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
arbitrary.workspace = true
arbtest.workspace = true
libc = "0.2.164"
normalize-path = "0.2.1"
walkdir = "2.5.0"

[dev-dependencies]
random-dir.workspace = true

[workspace]
members = [".", "cli"]

[workspace.dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
arbtest = "0.3.1"
random-dir = { git = "https://github.com/igankevich/kpea", version = "0.2.2", tag = "0.2.2" }
stuckliste = { path = "." }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[lints.rust]
#missing_docs = "warn"
