[package]
name = "stuckliste"
version.workspace = true
edition = "2021"
license = "GPL-3.0"
homepage = "https://github.com/igankevich/stuckliste"
repository = "https://github.com/igankevich/stuckliste"
documentation = "https://docs.rs/stuckliste"
readme = "README.md"
description = "A library for reading and writing MacOS bill-of-materials (BOM) files."
keywords = ["bom", "bill-of-materials", "mkbom", "lsbom"]
categories = ["encoding", "filesystem"]
include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
libc = "0.2.164"
normalize-path = "0.2.1"
walkdir = "2.5.0"

[dev-dependencies]
random-dir.workspace = true
arbitrary.workspace = true
arbtest.workspace = true

[workspace]
members = [".", "cli"]

[workspace.package]
version = "0.3.2"

[workspace.dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
arbtest = "0.3.1"
random-dir = "0.2.3"
stuckliste = { path = ".", version = "*" }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[lints.rust]
missing_docs = "warn"
