[package]
name = "stuckliste-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["std", "derive", "error-context", "help", "usage"], default-features = false }
stuckliste.workspace = true
tempfile = "3.14.0"
test_bin = "0.4.0"

[dev-dependencies]
arbitrary.workspace = true
arbtest.workspace = true
random-dir = { path = "../../cpio/random-dir" }
similar-asserts = "1.6.0"
