[package]
name = "stuckliste-cli"
version.workspace = true
edition = "2021"
license = "GPL-3.0"
homepage = "https://github.com/igankevich/stuckliste"
repository = "https://github.com/igankevich/stuckliste"
documentation = "https://docs.rs/stuckliste-cli"
readme = "../README.md"
description = "A command-line utility for reading and writing MacOS bill-of-materials (BOM) files."
keywords = ["bom", "bill-of-materials", "mkbom", "lsbom"]
categories = ["encoding", "filesystem", "command-line-utilities"]
include = ["**/*.rs", "Cargo.toml", "../README.md", "LICENSE"]

[dependencies]
bitflags = "2.8.0"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["std", "derive", "error-context", "help", "usage"], default-features = false }
stuckliste.workspace = true
tempfile = "3.17.1"
test_bin = "0.4.0"

[dev-dependencies]
arbitrary.workspace = true
arbtest.workspace = true
random-dir.workspace = true
similar-asserts = "1.6.1"
